Add support for visualizing virtual address ranges